# plotpp

./: .gitignore  404.html  CMakeLists.txt  Doxyfile  ImageFileType.hpp  LICENSE  Makefile  README.md  TerminalType.hpp  conanfile.py  conanfile.txt  get_cpm_latest.cmake  index.html  main.cpp  opstream.cpp  opstream.hpp  plotpp.hpp  script.gp
API/: index.html
API/Classes/: index.html
API/Classes/classoptional__ptr/: index.html
API/Classes/classplotpp_1_1_arrows/: index.html
API/Classes/classplotpp_1_1_boxes/: index.html
API/Classes/classplotpp_1_1_boxplot/: index.html
API/Classes/classplotpp_1_1_circle/: index.html
API/Classes/classplotpp_1_1_color/: index.html
API/Classes/classplotpp_1_1_figure/: index.html
API/Classes/classplotpp_1_1_fill_style/: index.html
API/Classes/classplotpp_1_1_filledcurves/: index.html
API/Classes/classplotpp_1_1_heatmap/: index.html
API/Classes/classplotpp_1_1_i_plot/: index.html
API/Classes/classplotpp_1_1_impulses/: index.html
API/Classes/classplotpp_1_1_line/: index.html
API/Classes/classplotpp_1_1_multiplot/: index.html
API/Classes/classplotpp_1_1_piechart/: index.html
API/Classes/classplotpp_1_1_points/: index.html
API/Classes/classplotpp_1_1_steps/: index.html
API/Classes/classplotpp_1_1_text/: index.html
API/Classes/classplotpp_1_1_x_error/: index.html
API/Classes/classplotpp_1_1_x_y_error/: index.html
API/Classes/classplotpp_1_1_y_error/: index.html
API/Classes/classplotpp_1_1_y_error_line/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_arrow_head_style_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_color_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_fill_style_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_line_type_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_plot_title_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_point_type_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01plotpp_1_1_text_01_4/: index.html
API/Classes/structfmt_1_1formatter_3_01std_1_1optional_3_01plotpp_1_1_color_01_4_01_4/: index.html
API/Classes/structplotpp_1_1_plot_title/: index.html
API/Classes/structremove__ptr/: index.html
API/Classes/structremove__ptr_3_01optional__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__ptr_3_01std_1_1shared__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__ptr_3_01std_1_1unique__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__ptr_3_01std_1_1weak__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__smart__ptr/: index.html
API/Classes/structremove__smart__ptr_3_01optional__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__smart__ptr_3_01std_1_1shared__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__smart__ptr_3_01std_1_1unique__ptr_3_01_t_01_4_01_4/: index.html
API/Classes/structremove__smart__ptr_3_01std_1_1weak__ptr_3_01_t_01_4_01_4/: index.html
API/Examples/: index.html
API/Examples/_y_error_line_8cpp-example/: index.html
API/Examples/arrows_8cpp-example/: index.html
API/Examples/bode_8cpp-example/: index.html
API/Examples/boxes_8cpp-example/: index.html
API/Examples/boxplot_8cpp-example/: index.html
API/Examples/circle_8cpp-example/: index.html
API/Examples/filledcurves_8cpp-example/: index.html
API/Examples/heatmap_8cpp-example/: index.html
API/Examples/impulses_8cpp-example/: index.html
API/Examples/line_8cpp-example/: index.html
API/Examples/multiplot_8cpp-example/: index.html
API/Examples/piechart_8cpp-example/: index.html
API/Examples/points_8cpp-example/: index.html
API/Examples/steps_8cpp-example/: index.html
API/Examples/xerror_8cpp-example/: index.html
API/Examples/xyerror_8cpp-example/: index.html
API/Examples/yerror_8cpp-example/: index.html
API/Examples/yerrorline_8cpp-example/: index.html
API/Namespaces/: index.html
API/Namespaces/namespacefmt/: index.html
API/Namespaces/namespaceplotpp/: index.html
API/Namespaces/namespaceplotpp_1_1color__map/: index.html
docs/: .gitignore  doxybook2-config.json  index.html  mkdocs.yml
docs/docs/: index.md
docs/docs/plotting_styles/: Figure.md  Line.md  LineType.md  index.md  plotting_styles.md
docs/search/: search_index.json
docu/: mkdocs.yml
docu/docs/: index.md
examples/: CMakeLists.txt  arrows.cpp  bode.cpp  boxes.cpp  boxplot.cpp  circle.cpp  color.cpp  filledcurves.cpp  filledline.cpp  functions.hpp  heatmap.cpp  impulses.cpp  line.cpp  logscale.cpp  mixed_plot.cpp  multiplot.cpp  piechart.cpp  points.cpp  steps.cpp  xerror.cpp  xyerror.cpp  yerror.cpp  yerrorline.cpp
include/: ArrowHeadStyle.hpp  Arrows.hpp  Boxes.hpp  Figure.hpp  Heatmap.hpp  IPlot.hpp  ImageFile.hpp  ImageFileType.hpp  Line.hpp  LineType.hpp  OutputFileType.hpp  Points.hpp  TerminalType.hpp  Text.hpp  XError.hpp  XYError.hpp  YError.hpp
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md  plotting_styles.md
opstream/: CMakeLists.txt  opstream.cpp  opstream.hpp
optional_ptr/: optional_ptr.hpp
plot_types/: ImageFile.hpp  Line.hpp
plotpp/: ArrowHeadStyle.cpp  ArrowHeadStyle.hpp  Arrows.hpp  Bode.hpp  Boxerrorbars.hpp  Boxes.hpp  Boxplot.hpp  Circle.cpp  Circle.hpp  Color.hpp  Colormaps.hpp  DataRelation.hpp  Figure.cpp  Figure.hpp  FillStyle.hpp  Filledcurves.hpp  Heatmap.hpp  IPlot.hpp  ImageFile.hpp  ImageFileType.cpp  ImageFileType.hpp  Impulses.hpp  Line.hpp  LineType.cpp  LineType.hpp  Multiplot.cpp  Multiplot.hpp  OutputFileType.cpp  OutputFileType.hpp  Piechart.hpp  PointType.hpp  Points.hpp  Steps.hpp  TerminalType.cpp  TerminalType.hpp  Text.cpp  Text.hpp  XError.hpp  XYError.hpp  YError.hpp  (+4 more)
plotting_styles/: index.html
plotting_styles/Line/: index.html
plotting_styles/Line Plot/line_plot/: index.html
plotting_styles/LineType/: index.html
plotting_styles/plotting_styles/: index.html
search/: search_index.json
smartest_pointer/: smartest_pointer.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
(+1 files in other folders)
